<resources>
    <string name="app_name">A</string>
    <string name="button">LEFT</string>
    <string name="button2">UP</string>
    <string name="button3">DOWN</string>
    <string name="button4">RIGHT</string>
    <string name="button5">A</string>
    <string name="button6">B</string>
    <string name="button7">TAB</string>
    <string name="switch1">S1</string>
    <string name="switch2">S2</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="save">保存</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="button8">Button</string>
</resources>
