<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="178dp"
        android:layout_marginTop="100dp"
        android:text="@string/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="428dp"
        android:text="@string/button2"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="528dp"
        android:text="@string/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button4"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="100dp"
        android:text="@string/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="480dp"
        android:text="@string/button5"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="383dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="480dp"
        android:text="@string/button6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="10dp"
        android:onClick="bt"
        android:showText="false"
        android:text="@string/switch1"
        android:textOff="off"
        android:textOn="on"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="10dp"
        android:text="@string/switch2"
        android:checked="true"
        app:layout_constraintStart_toStartOf="@+id/switch1"
        app:layout_constraintTop_toBottomOf="@+id/switch1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="42dp"
        android:background="#ECECEC"
        android:padding="3dp"
        android:rotation="0"
        android:text="@string/title_activity_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginEnd="10dp"
        android:text="@string/button7" />

</FrameLayout>